Remove extra shortcuts for tab next/prev

BUG: 489936